--- a/tests/index.html
+++ b/tests/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>src="
+<script>src="MyJavaScript.js"></script>
+<style>
+  body{
+    background-color: pink;
+  }
+</style>
+  </head>
+    <body>
+    </body>
+    </html>
