--- a/tests/index.html
+++ b/tests/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script>src="MyJavaScript.js"></script>
+<script src="MyJavaScript.js"></script>
 <style>
   body{
     background-color: pink;
